--- a/package.json
+++ b/package.json
@@ -26,8 +26,16 @@
     "@angular/platform-browser": "^16.1.1",
     "@angular/platform-browser-dynamic": "^16.1.1",
     "@angular/router": "^16.1.1",
-    "run-script-os": "^1.1.6",
     "@auth0/auth0-angular": "^2.1.0",
+    "@ngrx/store": "^16.0.1",
+    "filepond": "^4.30.4",
+    "filepond-plugin-image-crop": "^2.0.6",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "filepond-plugin-image-resize": "^2.0.10",
+    "filepond-plugin-image-transform": "^3.8.7",
+    "ngx-filepond": "^7.0.1",
+    "run-script-os": "^1.1.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
