--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles/styles.scss",
-              "src/styles/tailwind.scss"
+              "src/styles/tailwind.scss",
+              "./node_modules/filepond/dist/filepond.min.css",
+              "./node_modules/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css"
             ],
             "scripts": []
           },
@@ -104,7 +106,9 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles/styles.scss",
-              "src/styles/tailwind.scss"
+              "src/styles/tailwind.scss",
+              "./node_modules/filepond/dist/filepond.min.css",
+              "./node_modules/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css"
             ],
             "scripts": []
           }
